# appointment_server

./: CMakeLists.txt  client.cpp
appointment_service/: CMakeLists.txt
appointment_service/client/: CMakeLists.txt
appointment_service/client/queries/: delete_test.txt  make_appointment_test.txt  own_query.txt  select_doc.txt  update_test.txt
appointment_service/server/: CMakeLists.txt  create_clients.sql  start.cpp
client/: CMakeLists.txt  client.cpp
client/queries/: delete_test.txt  fill_database.txt  insert_test.txt  make_appointment_test.txt  own_query.txt  select_cards_test.txt  select_docs.txt  select_doctors_test.txt
server/: CMakeLists.txt  clients.db  config.txt  create_query.sql  server.cpp  server.h
